--- a/notebooks/Unterricht/Woche_1/01_Arbeit_mit_Jupyter_Notebooks.ipynb
+++ b/notebooks/Unterricht/Woche_1/01_Arbeit_mit_Jupyter_Notebooks.ipynb
@@ -160,7 +160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -174,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
