--- a/notebooks/Unterricht/Woche_1/03_Aufgaben.ipynb
+++ b/notebooks/Unterricht/Woche_1/03_Aufgaben.ipynb
@@ -14,6 +14,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1. Markdown\n",
+    "\n",
+    "*kursiv* **fett**\n",
+    "\n",
+    "## Überschrift\n",
+    "\n",
+    "Punkte:\n",
+    "* Punkt 1\n",
+    "* Punkt 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2. Python als Taschenrechner\n",
     "Für die folgenden Statements, versuche vorauszusagen, was das Resultat sein wird. Überprüfe deine Voraussage in einer Code-Zelle.\n",
     "\n",
@@ -22,6 +37,38 @@
     "- `-(2 + 3)`\n",
     "- `10 // 3`\n",
     "- `10 % 3`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lösung:\n",
+    "- 13\n",
+    "- 16\n",
+    "- -5\n",
+    "- 3\n",
+    "- 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3333333333333335"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 / 3"
    ]
   },
   {
@@ -44,6 +91,8 @@
     "a = b\n",
     "\n",
     "# Welche Werte sind in a und b?\n",
+    "# Lösung:\n",
+    "# a = 5, b = 5\n",
     "```\n",
     "\n",
     "## 3b\n",
@@ -55,7 +104,9 @@
     "b = a - 2\n",
     "\n",
     "# Welche Werte sind in a und b?\n",
-    "\n",
+    "# Lösung:\n",
+    "# b = 7\n",
+    "# a = 9\n",
     "```"
    ]
   },
@@ -70,14 +121,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "age1 = 36\n",
     "age2 = 42\n",
     "\n",
-    "### YOUR CODE HERE\n"
+    "### YOUR CODE HERE\n",
+    "\n",
+    "differenz = (age2 - age1)\n",
+    "\n",
+    "print (int(differenz))"
    ]
   },
   {
@@ -106,17 +169,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1020.0\n",
+      "20.0\n"
+     ]
+    }
+   ],
    "source": [
-    "### YOUR CODE HERE"
+    "### YOUR CODE HERE\n",
+    "\n",
+    "# 5a\n",
+    "\n",
+    "# Startwert = 1000\n",
+    "\n",
+    "# zinssatz = Startwert * 0.02\n",
+    "\n",
+    "# endkapital_1_jahr = zinssatz + Startwert\n",
+    "\n",
+    "\n",
+    "# print (endkapital)\n",
+    "# print (zinssatz)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1104.0808032\n",
+      "104.08080319999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5b\n",
+    "\n",
+    "startwert = 1000\n",
+    "\n",
+    "zinssatz = 1.02\n",
+    "\n",
+    "jahre = 5\n",
+    "\n",
+    "endkapital = startwert * zinssatz ** jahre\n",
+    "\n",
+    "print (endkapital)\n",
+    "print (endkapital - startwert)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -130,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
