--- a/notebooks/Unterricht/Woche_2/01_Unterricht.ipynb
+++ b/notebooks/Unterricht/Woche_2/01_Unterricht.ipynb
@@ -1007,7 +1007,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1021,7 +1021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
