--- a/notebooks/Unterricht/Woche_1/01_Arbeit_mit_Jupyter_Notebooks.ipynb
+++ b/notebooks/Unterricht/Woche_1/01_Arbeit_mit_Jupyter_Notebooks.ipynb
@@ -14,6 +14,219 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n",
+      "False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in (True,False):\n",
+    "    print(p,not p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True True\n",
+      "True False False\n",
+      "False True False\n",
+      "False False False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in (True,False):\n",
+    "    for q in (True,False):\n",
+    "        print (p, q, p and q)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True True True\n",
+      "True True False False\n",
+      "True False True True\n",
+      "True False False False\n",
+      "False True True False\n",
+      "False True False False\n",
+      "False False True False\n",
+      "False False False False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in (True,False):\n",
+    "    for q in (True,False):\n",
+    "        for r in (True, False):\n",
+    "            print (p, q, r, (p and (not q or r)) and (not(not r and p)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'a' in {'a', 'b', 'c'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 in {0,1,2,3,4,5,6}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 not in {1,2,3,4,5,6,7}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 in {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'set'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m {\u001b[32m1\u001b[39m} \u001b[38;5;129;01min\u001b[39;00m {{\u001b[32m1\u001b[39m}}\n",
+      "\u001b[31mTypeError\u001b[39m: unhashable type: 'set'"
+     ]
+    }
+   ],
+   "source": [
+    "{1} in {{1}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U = {0,1,2,3,4,5,6,7,8,9,10}\n",
+    "A = {2,3}\n",
+    "B = {1,2,3,4}\n",
+    "\n",
+    "for x in U:\n",
+    "    print (not(x in A) or (x in B))\n",
+    "    \n",
+    "A.issubset (B)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
