--- a/notebooks/Unterricht/Woche_2/02_Aufgaben.ipynb
+++ b/notebooks/Unterricht/Woche_2/02_Aufgaben.ipynb
@@ -83,7 +83,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
