--- a/notebooks/Unterricht/Woche_3/01_Unterricht.ipynb
+++ b/notebooks/Unterricht/Woche_3/01_Unterricht.ipynb
@@ -12,11 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wird in jedem Fall ausgeführt.\n"
+     ]
+    }
+   ],
    "source": [
-    "a = 2\n",
+    "a = 3\n",
     "b = 5\n",
     "\n",
     "c = 5\n",
@@ -50,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spielende.\n"
+     ]
+    }
+   ],
    "source": [
     "mein_tier = \"blauwal\"\n",
     "geraten = input(\"An welches Tier denke ich?\")\n",
@@ -100,12 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a ist grösser als b\n"
+     ]
+    }
+   ],
    "source": [
     "a = 5\n",
-    "b = 5\n",
+    "b = 4\n",
     "\n",
     "if a > b:\n",
     "    print(\"a ist grösser als b\")\n",
@@ -113,6 +137,54 @@
     "    print(\"a ist kleiner als b\")\n",
     "else:\n",
     "    print(\"a ist gleich b\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iusdfi du ayri\n"
+     ]
+    }
+   ],
+   "source": [
+    "nameee = input(\"name bitte\")\n",
+    "king = \"ardit\"\n",
+    "\n",
+    "if nameee == king:\n",
+    "    print (\"selam ardit du king\")\n",
+    "else:\n",
+    "    print (nameee, \"du ayri\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geht klar\n"
+     ]
+    }
+   ],
+   "source": [
+    "alter = int(input(\"was ist dein alter\"))\n",
+    "alter_freundin = int(input(\"alter freundin\"))\n",
+    "\n",
+    "max_alter_freundin = alter / 2 + 7\n",
+    "\n",
+    "if alter_freundin < max_alter_freundin:\n",
+    "    print(\"du pedo\")\n",
+    "else:\n",
+    "    print(\"geht klar\")\n"
    ]
   },
   {
@@ -125,9 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Login erfolgreich.\n"
+     ]
+    }
+   ],
    "source": [
     "username = \"theuser\"\n",
     "password = \"thepassword\"\n",
@@ -181,6 +261,34 @@
     "```\n",
     "\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a ist gleich b\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 3\n",
+    "c = 3\n",
+    "\n",
+    "if a==b:\n",
+    "    print(\"a ist gleich b\")\n",
+    "elif a==c:\n",
+    "    print (\"a ist gleich c\")\n",
+    "elif b==c:\n",
+    "    print(\"b ist gleich c\")\n",
+    "else:\n",
+    "    print(\"alle zahlen sind unterschiedlich\")\n"
    ]
   },
   {
@@ -254,12 +362,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text1 = \"hallo\"\n",
-    "text2 = \"hallo \"\n",
+    "text2 = \"hallo\"\n",
     "text1 == text2"
    ]
   },
@@ -272,9 +391,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"1\" == 1"
    ]
@@ -355,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,18 +496,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text1 in text2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text1 in text3"
    ]
@@ -393,9 +545,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datentyp: <class 'bool'>\n",
+      "Wert: False\n"
+     ]
+    }
+   ],
    "source": [
     "a = 3\n",
     "b = 5\n",
@@ -417,9 +578,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_it_good = True #Wichtig, Grosses T bzw. F (fuer False) \n",
     "type(is_it_good)"
@@ -496,7 +668,7 @@
     "\n",
     "Schaue dir folgendes Programm an. \n",
     "- a) Was gibt das Programm aus?\n",
-    "- b) Was würde passieren, wenn wir die Vergleiche mit `guess` statt mit `guess_nbr` machen würden?\n",
+    "- b) Was würde passieren, wenn wir die Vergleiche mit `guess` statt mit `guess_nbr` machen würden? \n",
     "- c) Wie können wir die zwei `elif`-Statements zu einem `elif` vereinfachen?\n",
     "```python\n",
     "\n",
@@ -521,6 +693,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "a) es sagt, ob man die richtige zahl (7) geraten hat\n",
+    "b) es würde nicht gehen, da es nicht in int konvertiert wird\n",
+    "c) -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rate eine Zahl zwischen 1 und 10\n",
+      "Richtig, gratuliere!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Rate eine Zahl zwischen 1 und 10\")\n",
+    "guess = input()\n",
+    "guess_nbr = int(guess)\n",
+    "\n",
+    "correct = 7\n",
+    "\n",
+    "if guess_nbr == correct:\n",
+    "    print(\"Richtig, gratuliere!\")\n",
+    "elif guess_nbr < 1 or guess_nbr > 10:\n",
+    "    print(\"Die Zahl muss zwischen 1 und 10 sein!\")\n",
+    "else:\n",
+    "    print(\"Leider falsch\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br><br><br><br><br>\n",
     "\n",
     "<div class=\"exercise\">\n",
@@ -537,11 +747,41 @@
     "\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "du darfst bier und wein kaufen\n"
+     ]
+    }
+   ],
+   "source": [
+    "alter = int(input(\"gib dein alter ein\"))\n",
+    "if alter < 16:\n",
+    "    print (\"du darfst kein aklohol kaufen\")\n",
+    "elif alter >= 18:\n",
+    "    print (\"du darfst alles kaufen\")\n",
+    "else:\n",
+    "    print (\"du darfst bier und wein kaufen\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -555,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
