--- a/notebooks/Unterricht/Woche_3/02_Aufgaben.ipynb
+++ b/notebooks/Unterricht/Woche_3/02_Aufgaben.ipynb
@@ -20,15 +20,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deine Reisezeit mit fahrrad= 1  Stunden 27 Minuten\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "# brauche transportmethode, strecke, geschiwndigkeit\n",
+    "# ausgeben: Reisezeit = strecke / geschwindigkeit\n",
+    "\n",
+    "transportmethode = input(\"welche Transpormethode nimmst du\")\n",
+    "strecke = int(input(\"wieviel Kilometer fährst du\"))\n",
+    "\n",
+    "transportmethode_gehen = \"gehen\"\n",
+    "transportmethode_fahrrad = \"fahrrad\"\n",
+    "transportmethode_auto = \"auto\"\n",
+    "transportmethode_zug = \"zug\"\n",
+    "\n",
+    "geschwindigkeit_gehen = 5\n",
+    "geschwindigkeit_fahrrad = 15\n",
+    "geschwindigkeit_auto = 50\n",
+    "geschwindigkeit_zug = 70\n",
+    "\n",
+    "reisezeit_gehen = strecke / geschwindigkeit_gehen\n",
+    "reisezeit_fahrrad = strecke /geschwindigkeit_fahrrad\n",
+    "reisezeit_auto = strecke / geschwindigkeit_auto\n",
+    "reisezeit_zug = strecke / geschwindigkeit_zug\n",
+    "\n",
+    "stunden_gehen = int(reisezeit_gehen)\n",
+    "stunden_fahrrad = int(reisezeit_fahrrad)\n",
+    "stunden_auto = int(reisezeit_auto)\n",
+    "stunden_zug = int(reisezeit_zug)\n",
+    "\n",
+    "rest_gehen = int((reisezeit_gehen - stunden_gehen) *60)\n",
+    "rest_fahrrad = int((reisezeit_fahrrad - stunden_fahrrad) * 60)\n",
+    "rest_auto = int((reisezeit_auto - stunden_auto) * 60)\n",
+    "rest_zug = int((reisezeit_zug- stunden_zug) * 60)\n",
+    "\n",
+    "if transportmethode == transportmethode_gehen:\n",
+    "    print (\"deine Reisezeit beim gehen=\", stunden_gehen, \" Stunden\", rest_gehen, \"Minuten\")\n",
+    "\n",
+    "elif transportmethode == transportmethode_fahrrad:\n",
+    "    print (\"deine Reisezeit mit fahrrad=\", stunden_fahrrad, \" Stunden\", rest_fahrrad, \"Minuten\")\n",
+    "    \n",
+    "elif transportmethode == transportmethode_auto:\n",
+    "    print (\"deine Reisezeit mit auto=\", stunden_auto, \" Stunden\", rest_auto, \"Minuten\")\n",
+    "    \n",
+    "elif transportmethode == transportmethode_zug:\n",
+    "    print (\"deine Reisezeit mit zug=\", stunden_zug, \" Stunden\", rest_zug, \" Minuten\")\n",
+    "\n"
    ]
   },
   {
@@ -63,6 +110,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print ('''\n",
+    "WILLKOMMEN BEI DER BANK IHRES VERTRAUENS\n",
+    "****************************************\n",
+    "''')\n",
+    "\n",
+    "hunderter = 100\n",
+    "fünfziger = 50\n",
+    "zwanziger = 20\n",
+    "zehner = 10\n",
+    "\n",
+    "\n",
+    "abheben = int(input(\"wie viel möchten sie abheben\"))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -74,11 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### YOUR CODE HERE"
@@ -94,11 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### YOUR CODE HERE"
@@ -114,11 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### YOUR CODE HERE"
@@ -134,11 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### YOUR CODE HERE"
@@ -154,11 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### YOUR CODE HERE"
@@ -202,8 +251,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   },
   "orig_nbformat": 4
  },
