--- a/notebooks/Unterricht/Woche_3/03_Lösungen.ipynb
+++ b/notebooks/Unterricht/Woche_3/03_Lösungen.ipynb
@@ -22,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sie brauchen 40.0 Stunden\n"
+     ]
+    }
+   ],
    "source": [
     "distance = float(input('Wie weit ist Ihr Ziel entfernt?'))\n",
     "travelMedium = input('Wie reisen Sie? (walk=Gehen, bike=Fahrrad, car=Auto, train=Zug)')\n",
@@ -294,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.1"
   },
   "orig_nbformat": 4
  },
