--- a/notebooks/Unterricht/Woche_3/02_Aufgaben.ipynb
+++ b/notebooks/Unterricht/Woche_3/02_Aufgaben.ipynb
@@ -110,28 +110,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print ('''\n",
-    "WILLKOMMEN BEI DER BANK IHRES VERTRAUENS\n",
-    "*****************************************\n",
-    "''')\n",
-    "\n",
-    "hunderter = 100\n",
-    "fünfziger = 50\n",
-    "zwanziger = 20\n",
-    "zehner = 10\n",
-    "\n",
-    "\n",
-    "abheben = int(input(\"wie viel möchten sie abheben\"))\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -142,11 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### YOUR CODE HERE"
+    "### YOUR CODE HERE\n",
+    "geldbetrag = int(input(\"Geldbetrag bitte\"))\n"
    ]
   },
   {
@@ -158,27 +137,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190\n"
+     ]
+    }
+   ],
    "source": [
-    "### YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Berechnen Sie, wie viele 100er-Noten ausgegeben werden müssen. (Hinweis: Verwenden Sie den Divisions-Operator.)"
+    "### YOUR CODE HERE\n",
+    "print (geldbetrag)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### YOUR CODE HERE"
+    "### Berechnen Sie, wie viele 100er-Noten ausgegeben werden müssen. (Hinweis: Verwenden Sie den Divisions-Operator.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "### YOUR CODE HERE\n",
+    "#anzahl 100er\n",
+    "geldbetrag = geldbetrag /100\n",
+    "print (int(geldbetrag))"
    ]
   },
   {
@@ -190,11 +191,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
    "source": [
-    "### YOUR CODE HERE"
+    "### YOUR CODE HERE\n",
+    "# Restbetrag nach abzug 100er\n",
+    "restbetrag = geldbetrag - (int(geldbetrag))\n",
+    "restbetrag = restbetrag * 100\n",
+    "print (round(restbetrag))"
    ]
   },
   {
@@ -206,11 +219,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 278,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WILLKOMMEN BEI DER BANK IHRES VERTRAUENS\n",
+      "****************************************\n",
+      "\n",
+      "dein eingegebener wert: 571 Fr\n",
+      "\n",
+      "Bitte warten...\n",
+      "Sie erhalten:\n",
+      "\n",
+      "5 hunderter\n",
+      "1 fünfziger\n",
+      "1 zwanziger\n",
+      "0 zehner\n",
+      "dein restbetrag ist: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "### YOUR CODE HERE"
+    "### YOUR CODE HERE\n",
+    "print ('''\n",
+    "WILLKOMMEN BEI DER BANK IHRES VERTRAUENS\n",
+    "****************************************\n",
+    "'''\n",
+    ")\n",
+    "geldbetrag = int(input(\"Wie viel möchten sie abheben?\"))\n",
+    "\n",
+    "print (\"dein eingegebener wert:\", geldbetrag, \"Fr\")\n",
+    "print ('''\n",
+    "Bitte warten...\n",
+    "Sie erhalten:\n",
+    "''')\n",
+    "\n",
+    "geldbetrag = geldbetrag /100\n",
+    "print (int(geldbetrag), \"hunderter\")\n",
+    "\n",
+    "#restbetrag berechnen:\n",
+    "restbetrag = geldbetrag - (int(geldbetrag))\n",
+    "restbetrag = restbetrag * 100\n",
+    "\n",
+    "\n",
+    "\n",
+    "if restbetrag <100:\n",
+    "    anzahl50er = restbetrag / 50\n",
+    "    print (int(anzahl50er), \"fünfziger\")\n",
+    "    \n",
+    "\n",
+    "    anzahl50er = int(anzahl50er)\n",
+    "    restbetrag = round(restbetrag - anzahl50er * 50)\n",
+    "    \n",
+    "\n",
+    "else:\n",
+    "    print (\"0 fünfziger\")\n",
+    "\n",
+    "\n",
+    "if restbetrag <50 and restbetrag >= 20:\n",
+    "    anzahl20er = restbetrag / 20\n",
+    "    print (int(anzahl20er), \"zwanziger\")\n",
+    "\n",
+    "    anzahl20er = int(anzahl20er)\n",
+    "    restbetrag = restbetrag - anzahl20er * 20\n",
+    "    \n",
+    "else:\n",
+    "    print (\"0 zwanziger\")\n",
+    "\n",
+    "    \n",
+    "        \n",
+    "if restbetrag < 20 and restbetrag >= 10:\n",
+    "    anzahl10er = restbetrag / 10\n",
+    "    print (int(anzahl10er), \"zehner\")\n",
+    "    \n",
+    "    anzahl10er =int(anzahl10er)\n",
+    "    restbetrag = restbetrag - anzahl10er * 10\n",
+    "else:\n",
+    "    print (\"0 zehner\")\n",
+    "            \n",
+    "\n",
+    "if restbetrag <= 1:\n",
+    "    print (\"dein restbetrag ist:\", (round(restbetrag)))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "##elif restbetrag <49:\n",
+    "    ##anzahl20er = restbetrag / 20\n",
+    "    ##print (int(anzahl20er), \"zwanziger\")\n",
+    "\n"
    ]
   },
   {
@@ -242,6 +346,45 @@
     "- Dann nach dem Operator (also +, -, /, und *)\n",
     "- Dann nach der zweiten Zahl\n",
     "- Anschliessend berechnet er das Resultat\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "leck mini eier\n"
+     ]
+    }
+   ],
+   "source": [
+    "erste_zahl = (input(\"Gib erste zahl ein\"))\n",
+    "operator = input(\"gib operator ein\")\n",
+    "zweite_zahl = (input(\"Gib zweite zahl ein\"))\n",
+    "\n",
+    "if not erste_zahl.isdigit() or not zweite_zahl.isdigit():\n",
+    "    print(\"leck mini eier\")\n",
+    "\n",
+    "else:\n",
+    "    erste_zahl = float(erste_zahl)\n",
+    "    zweite_zahl = float(zweite_zahl)\n",
+    "\n",
+    "    if operator == (\"+\"):\n",
+    "        print (erste_zahl + zweite_zahl)\n",
+    "    elif operator == (\"*\"):\n",
+    "        print (erste_zahl * zweite_zahl)\n",
+    "    elif operator == (\"-\"):\n",
+    "        print (erste_zahl - zweite_zahl)\n",
+    "    elif operator == (\"/\"):\n",
+    "        print (erste_zahl / zweite_zahl)\n",
+    "    else:\n",
+    "        print (\"leck mini eier\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
