--- a/notebooks/Unterricht/Woche_1/03_Aufgaben.ipynb
+++ b/notebooks/Unterricht/Woche_1/03_Aufgaben.ipynb
@@ -169,6 +169,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1104.0808032\n",
+      "104.08080319999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "startwert = 1000\n",
+    "zinssatz = 1.02\n",
+    "jahre = 5\n",
+    "\n",
+    "endkapital = startwert * zinssatz ** jahre\n",
+    "print (endkapital)\n",
+    "print (endkapital - startwert)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
