--- a/notebooks/Unterricht/Woche_3/02_Aufgaben.ipynb
+++ b/notebooks/Unterricht/Woche_3/02_Aufgaben.ipynb
@@ -20,6 +20,233 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sehr gut\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4. Notenrechner\n",
+    "#Schreibe ein Programm, das eine Note (1–6) vom Benutzer einliest und dann eine Textbewertung ausgibt:\n",
+    "#6 → „Sehr gut“\n",
+    "#5 → „Gut“\n",
+    "#4 → „Genügend“\n",
+    "#3 → „Ungenügend“\n",
+    "#2 → „Schwach“\n",
+    "#1 → „Sehr schwach“\n",
+    "\n",
+    "note = float(input(\"was ist deine note\"))\n",
+    "if note == 6:\n",
+    "    print (\"sehr gut\")\n",
+    "elif note >= 5:\n",
+    "    print (\"Gut\")\n",
+    "elif note >= 4:\n",
+    "    print (\"genügend\")\n",
+    "elif note >= 3:\n",
+    "    print (\"ungenügend\")\n",
+    "elif note >= 2:\n",
+    "    print (\"schwach\")\n",
+    "elif note == 1:\n",
+    "    print (\"sehr schwach\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verbrauch in kWh: 1200 gesammtkosten 290.0 Franken\n"
+     ]
+    }
+   ],
+   "source": [
+    "#💡 5. Stromkostenrechner\n",
+    "# Ein Benutzer gibt seinen Stromverbrauch (kWh) ein.\n",
+    "# Der Preis beträgt:\n",
+    "# 0.25 Fr. pro kWh bis 1000 kWh\n",
+    "# 0.20 Fr. pro kWh für alles über 1000 kWh\n",
+    "\n",
+    "stromverbrauch = int(input(\"was ist dein Stromverbrauch\"))\n",
+    "\n",
+    "if stromverbrauch <= 1000:\n",
+    "    print (\"Verbrauch in kWh:\", stromverbrauch, \"gesammtkosten\",stromverbrauch * 0.25, \"Franken\")\n",
+    "\n",
+    "\n",
+    "elif stromverbrauch > 1000:\n",
+    "    print (\"Verbrauch in kWh:\", stromverbrauch, \"gesammtkosten\", 1000 * 0.25 + (stromverbrauch -1000) * 0.2, \"Franken\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deine gesamtkosten = 18.0375\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 🚗 6. Tankkostenrechner\n",
+    "# Frage nach:\n",
+    "#der gefahrenen Strecke (km),\n",
+    "#dem Verbrauch pro 100 km (Liter),\n",
+    "#dem Benzinpreis pro Liter (Fr.).\n",
+    "#Berechne die Gesamtkosten der Fahrt.\n",
+    "#Beispiel:\n",
+    "\n",
+    "Streckee = int(input(\"wieviel km bist du gefahren\"))\n",
+    "Verbrauch = float(input(\"was ist dein verbrauch\"))\n",
+    "benzinpreis = float(input(\"was ist der benzinpreis in deiner umgebung\"))\n",
+    "\n",
+    "Gesamtkostenn = ((Streckee * Verbrauch) / 100 * benzinpreis)\n",
+    "print (\"deine gesamtkosten =\", Gesamtkostenn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dein alter = 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#📅 7. Altersrechner\n",
+    "#Lass den Benutzer sein Geburtsjahr eingeben.\n",
+    "#Berechne dann sein Alter (aktuell im Jahr 2025).\n",
+    "#Beispiel:\n",
+    "\n",
+    "Geburtsjahrr = int(input(\"was ist dein Geburtsjahr (aktuell im Jahr 2025)\"))\n",
+    "monat = int(input(\"welchen monat bist du geburen (in zahl)\"))\n",
+    "if monat >= 8:\n",
+    "    print (\"dein alter =\", 2025 - Geburtsjahrr - 1)\n",
+    "else:\n",
+    "    print (\"dein alter =\", 2025 - Geburtsjahrr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deine Gesammtkosten mit 12.0 Prozent Trinkgeld ist 96.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "#💰 9. Trinkgeldrechner\n",
+    "#Frage den Rechnungsbetrag und den gewünschten Trinkgeld-Prozentsatz ab.\n",
+    "#Berechne und gib die Gesamtsumme aus.\n",
+    "\n",
+    "Rechnungsbetragg = float(input(\"wieviel ist ihre rechnung\"))\n",
+    "Trinkgeldd = float(input(\"wieviel Porzent wollen sie als Trinkgeld geben\"))\n",
+    "\n",
+    "Gesamtsumme = (Trinkgeldd / 100 * Rechnungsbetragg) + Rechnungsbetragg\n",
+    "\n",
+    "Gesamtsumme = round(Gesamtsumme / 0.05) * 0.05\n",
+    "\n",
+    "print (\"deine Gesammtkosten mit\", Trinkgeldd, \"Prozent Trinkgeld ist\", Gesamtsumme)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 🔢 10. Zahlenraten mit mehreren Versuchen\n",
+    "# Wie Aufgabe 8, aber:\n",
+    "#der Benutzer darf 3-mal raten,\n",
+    "#das Programm sagt nach jedem Versuch, ob die Zahl größer oder kleiner ist.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deine reisezeit = 8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#bruache strecke in km\n",
+    "#brauche transportmethode\n",
+    "#soll reisezeit ausgeben\n",
+    "#formel für reisezeit = reisezeit/geschwindigkeit\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "transportmethode = input (\"welche transportmehtode brauchen sie\")\n",
+    "reisezeit = float(input(\"wieviel km?\"))\n",
+    "\n",
+    "if transportmethode == \"walk\":\n",
+    "    print (\"deine reisezeit =\", reisezeit / 5, \"stunden\")\n",
+    "elif transportmethode == \"bike\":\n",
+    "    print (\"deine reisezeit = \", reisezeit / 15, \"stunden\")\n",
+    "elif transportmethode == \"car\":\n",
+    "    print (\"deine reisezeit = \", reisezeit / 50, \"stunden\")\n",
+    "elif transportmethode == \"zug\":\n",
+    "    print (\"deine reisezeit = \", reisezeit / 70, \"stunden\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -76,6 +303,40 @@
     "elif transportmethode == transportmethode_zug:\n",
     "    print (\"deine Reisezeit mit zug=\", stunden_zug, \" Stunden\", rest_zug, \" Minuten\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evenNumber(myRange):\n",
+    "\n",
+    "    gerade_zahlen = myRange // 2+(myRange%2)\n",
+    "    return gerade_zahlen\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deine zahl ist gerade\n"
+     ]
+    }
+   ],
+   "source": [
+    "zahl = int(input(\"gebe eine Zahl ein\"))\n",
+    "if zahl % 2 == 0:\n",
+    "    print(\"deine zahl ist gerade\")\n",
+    "else:\n",
+    "    print (\"deine Zahl ist ungerade\")"
    ]
   },
   {
@@ -350,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -386,6 +647,32 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Schreibe ein Programm, das eine Note (1–6) vom Benutzer einliest und dann eine Textbewertung ausgibt:\n",
+    "\n",
+    "6 → „Sehr gut“\n",
+    "\n",
+    "5 → „Gut“\n",
+    "\n",
+    "4 → „Genügend“\n",
+    "\n",
+    "3 → „Ungenügend“\n",
+    "\n",
+    "2 → „Schwach“\n",
+    "\n",
+    "1 → „Sehr schwach“"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
