--- a/notebooks/Unterricht/Woche_1/01_Arbeit_mit_Jupyter_Notebooks.ipynb
+++ b/notebooks/Unterricht/Woche_1/01_Arbeit_mit_Jupyter_Notebooks.ipynb
@@ -227,6 +227,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eingabe nicht gültig\n"
+     ]
+    }
+   ],
+   "source": [
+    "vermoegen_steuer_berechnen(-1800000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
