--- a/notebooks/Unterricht/Woche_3/02_Aufgaben.ipynb
+++ b/notebooks/Unterricht/Woche_3/02_Aufgaben.ipynb
@@ -104,7 +104,7 @@
     "# Frage nach:\n",
     "#der gefahrenen Strecke (km),\n",
     "#dem Verbrauch pro 100 km (Liter),\n",
-    "#dem Benzinpreis pro Liter (Fr.).\n",
+    "#dem Benzinpreis pro Liter (Fr.)..\n",
     "#Berechne die Gesamtkosten der Fahrt.\n",
     "#Beispiel:\n",
     "\n",
